# kenja

./: Cargo.toml  Dockerfile  README.md  build.rs
examples/: client.rs  server.rs
src/: lib.rs  main.rs  search_engine.rs  search_engines.rs
src/database/: mongo.rs  search_engine.rs
src/documents/: anime_search.rs
src/search_engine/: mongo.rs
src/search_engines/: mongo.rs  mongodb.rs
src/search_engines/mongodb/: atlas.rs  mongo.rs
src/services/: anime_search.rs  display_messages.rs  messages.rs
